--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/github-favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Github Favourites</title>
+    <title>Repofinder</title>
   </head>
-  <body class="bg-white dark:bg-gray-900">
+  <body
+    class="bg-gray-100 dark:bg-dark text-gray-900 dark:text-light-gray transition-colors duration-300"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
