--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Repofinder</title>
   </head>
-  <body
-    class="bg-gray-100 dark:bg-dark text-gray-900 dark:text-light-gray transition-colors duration-200"
-  >
+  <body class="bg-gray-100 dark:bg-dark text-gray-900 dark:text-light-gray">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
